fix select an option BUG on safari

--- a/app/design/frontend/Smartwave/porto/Magento_Catalog/web/css/source/_module.less
+++ b/app/design/frontend/Smartwave/porto/Magento_Catalog/web/css/source/_module.less
@@ -1780,6 +1780,10 @@ body.catalog-product-compare-index {
   display: none;
   }
 
+  .cus-select:active{
+    direction: ltr;
+  }
+
   .cus-select{
     direction: rtl;
     width: 100%;
